# samstock-crawldata

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  KE-HOACH-CRAWL-DATA-CHI-TIET-1.md  KE-HOACH-XAY-REPO-CHUNG-KHOAN-VN.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/samvnstock/: __init__.py
src/samvnstock/api/: _fallback.py  company.py  financial.py  listing.py  quote.py
src/samvnstock/core/: cache.py  client.py  exceptions.py  models.py  normalize.py  registry.py  validate.py
src/samvnstock/providers/: base.py
src/samvnstock/providers/_shared/: finance_items.py
src/samvnstock/providers/vci/: __init__.py  company.py  const.py  finance.py  listing.py  quote.py
src/samvnstock/providers/vnd/: __init__.py  const.py  quote.py
src/samvnstock/utils/: datetime.py
tests/unit/: test_api_facade.py  test_cache.py  test_client.py  test_company_facade.py  test_company_vci.py  test_fallback.py  test_finance_vci.py  test_financial_facade.py  test_listing_vci.py  test_listing_vci_extended.py  test_normalize.py  test_package.py  test_quote_auto_source.py  test_quote_vci.py  test_quote_vnd.py  test_validate.py
