[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "samvnstock"
version = "0.5.0"
description = "Thư viện Python lấy dữ liệu chứng khoán Việt Nam, mã nguồn mở (MIT)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Sam - (Tuan)", email = "tuancat8730@gmail.com" }]
keywords = ["vietnam", "stock", "vnstock", "finance", "chung-khoan"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
  "httpx>=0.27",
  "pandas>=2.0",
  "pyarrow>=16.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "ruff>=0.6",
  "mypy>=1.10",
  "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/tuancat8730-sam/samstock-crawldata"
Issues = "https://github.com/tuancat8730-sam/samstock-crawldata/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/samvnstock"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "network: tests that hit real network endpoints (run manually/cron, not in CI)",
]
addopts = "--cov=samvnstock --cov-report=term-missing -m 'not network'"
